# why-hub

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  config.deploy.toml  config.example.toml  config.toml  docker-compose.yml  pyproject.toml  requirements.txt
db/init/: 01-roles.sh
docs/: workflow-adr-capture.md  개발-실행계획-산출물인덱스.md
docs/proposals/: 기획안1-팀내부-지식허브-MVP.md  기획안2-범용-지식허브-확장.md
docs/specs/: 구현스펙-M1-M4-Phase.md  구현스펙-UI-테마-디자인.md  구현스펙-generate-M8.md  구현스펙-postgres-배포.md  구현스펙-멀티턴생성-펑션콜.md  구현스펙-멀티프로젝트.md  구현스펙-승인워크플로우.md  구현스펙-인증인가-RBAC.md  구현스펙-자체delta엔진-M1.md  구현스펙-평가셋-M5.md
hub/: __init__.py  chat.py  config.py  llm.py  models.py  service.py
hub/auth/: __init__.py  deps.py  jwt_service.py  passwords.py  principal.py  ratelimit.py  repository.py  service.py  tokens.py
hub/eval/: __init__.py  golden.py  harness.py  metrics.py
hub/interfaces/: __init__.py  http_api.py  mcp_server.py  web.py
hub/store/: __init__.py  anchors.py  base.py  diffing.py  file_store.py  history.py  index_fts.py  journal.py  lint.py  locking.py  normalize.py  paths.py  pg_store.py  reconcile.py  save.py  snapshots.py  submissions.py
hub/tests/: authhelpers.py  test_approval_workflow.py  test_auth_actor_spoofing.py  test_auth_jwt_mcp.py  test_auth_passwords.py  test_auth_pat.py  test_auth_ratelimit_timing.py  test_auth_rbac.py  test_auth_signup_login.py  test_chat_functioncall.py  test_llm_endpoint.py  test_m5_eval.py  test_m6_web.py  (+20 more)
scripts/: eval_search.py  import_to_postgres.py  migrate_roles.py  seed_knowledge.py
templates/: adr.md  design-intent.md
(+24 files in other folders)
